# espdap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig-hw-rev1  sdkconfig-rev5
components/daplink-esp/cmsis_dap/: DAP.h  DAP_config.h
components/daplink-esp/interface/: swd_host.c  swd_host.h
components/led_strip/: led_strip_rmt_ws2812.c
components/mpy_embed/: CMakeLists.txt
components/mpy_embed/glue/: mpy_bootstrap.c  mpy_bootstrap.h
components/mpy_embed/mods/: logger.c
components/mpy_embed/mpy_embed/: micropython_embed.mk  mpconfigport.h
main/: CMakeLists.txt  Kconfig.projbuild  bootstrap_fsm.cpp  bootstrap_fsm.hpp  idf_component.yml  main.c  main.cpp
main/ble/: ble_serv_mgr.cpp  firmware_character_cb.cpp  flash_algo_character_cb.cpp  manifest_character_cb.cpp  state_character_cb.cpp
main/ble/includes/: firmware_character_cb.hpp  flash_algo_character_cb.hpp  manifest_character_cb.hpp  merged_characteristic.hpp  state_character_cb.hpp
main/comm/: http_downloader.cpp  mq_client.cpp  mq_client.hpp  mq_defs.hpp  mqtt_client.cpp  mqtt_client.hpp  rpc_cmd_packet.hpp  rpc_packet.hpp  rpc_report_packet.hpp  wifi_manager.cpp  wifi_manager.hpp
main/comm/ble/: ble_serv_mgr.cpp  firmware_character_cb.cpp
main/comm/ble/includes/: ble_serv_mgr.hpp  chunked_characteristic.hpp
main/comm/usb/: cdc_acm.cpp
main/comm/usb/includes/: cdc_acm.hpp
main/driver/: swd_driver.cpp
main/driver/includes/: button_monitor.hpp  swd_driver.hpp
main/driver/lcd/: display_manager.hpp  lcd_manager.cpp  lcd_manager.hpp  lhs154kc.c  lhs154kc.h  lvgl_wrapper.c
main/fs_sample/: flash_algo.json  manifest.json
main/misc/: config_reader.cpp
main/misc/includes/: config_loader.hpp  config_reader.hpp  file_utils.hpp  soul_nvs.hpp
main/prog/: cohere_flasher.cpp  config_manager.cpp  firmware_manager.cpp  flash_algo.cpp  fw_asset_manager.cpp  manifest_mgr.cpp  offline_flasher.cpp  swd_headless_flasher.cpp  swd_prog.cpp
main/prog/includes/: cohere_flasher.hpp  config_manager.hpp  firmware_manager.hpp  flash_algo.hpp  fw_asset_manager.hpp  led_ctrl.hpp  manifest_mgr.hpp  offline_flasher.hpp  swd_headless_flasher.hpp  swd_prog.hpp
main/ui/: ui_commander.cpp  ui_commander.hpp  ui_composer_114.cpp  ui_composer_114.hpp
main/wasm/: rgb_led_module.cpp  swd_module.cpp  wasm_manager.cpp
main/wasm/includes/: rgb_led_module.hpp  swd_module.hpp  wasm_manager.hpp  wasm_module.hpp
